--- a/WaterTracker/Supporting Files/Info.plist
+++ b/WaterTracker/Supporting Files/Info.plist
@@ -21,5 +21,17 @@
 			</array>
 		</dict>
 	</dict>
+    <key>UIAppFonts</key>
+    <array>
+        <string>Jost-Black.ttf</string>
+        <string>Jost-Bold.ttf</string>
+        <string>Jost-ExtraBold.ttf</string>
+        <string>Jost-ExtraLight.ttf</string>
+        <string>Jost-Light.ttf</string>
+        <string>Jost-Medium.ttf</string>
+        <string>Jost-Regular.ttf</string>
+        <string>Jost-SemiBold.ttf</string>
+        <string>Jost-Thin.ttf</string>
+    </array>
 </dict>
 </plist>
